# celine-webapp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  dump.yaml  pyproject.toml  skaffold.yaml  taskfile.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_suggestions_gamification.py  003_flexibility_commitments.py  004_user_onboarding_seen.py  005_user_onboarding_pages.py
docs/: api-reference.md  architecture.md  development.md  features.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  push.ts  stores.ts
frontend/src/lib/components/: EnergyChart.svelte  Icon.svelte  Skeleton.svelte  StatCard.svelte  ThemeToggle.svelte  index.ts
frontend/src/lib/styles/: theme.css
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/accept-terms/: +page.svelte
frontend/src/routes/assistant/: +page.svelte
frontend/src/routes/no-smart-meter/: +page.svelte
frontend/src/routes/notifications/: +page.svelte
frontend/src/routes/privacy/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/terms/: +page.svelte
frontend/static/: sw.js
src/celine/webapp/: __init__.py  auth.py  cli.py  db.py  main.py  models.py  routes.py  settings.py
src/celine/webapp/api/: __init__.py  co2_settings.py  community.py  deps.py  feedback.py  forecast.py  gamification.py  meta.py  notifications.py  overview.py  schemas.py  settings_routes.py  suggestions.py  user.py  weather.py
src/celine/webapp/db/: __init__.py  models.py  session.py  user_settings.py
tests/: conftest.py  test_api.py  test_forecast.py
