[project]
name = "rec-webapp-bff"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.46",
  "pydantic-settings>=2.12.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0",
  "python-jose[cryptography]>=3.3.0",
  "asyncpg>=0.31.0",
  "sqlalchemy-utils>=0.42.1",
]


[tool.uv]

[dependency-groups]
dev = [
    "dumpster-cli>=1.4.0",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["celine.webapp*"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
commit_parser = "conventional"

upload_to_release = false
upload_to_pypi = false
commit_version_number = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "up"]
parse_squash_commits = true
ignore_merge_commits = true

